@@ -52,7 +52,10 @@ qGaimPrefsInit(void)
 	gaim_prefs_add_none("/gaim/qpe");
 	gaim_prefs_add_none("/gaim/qpe/blist");
 	gaim_prefs_add_bool("/gaim/qpe/blist/show_offline_buddies", false);
-	gaim_prefs_add_bool("/gaim/qpe/blist/show_empty_groups", false);
+	gaim_prefs_add_bool("/gaim/qpe/blist/show_empty_groups",    false);
+	gaim_prefs_add_bool("/gaim/qpe/blist/show_idle_times",      true);
+	gaim_prefs_add_bool("/gaim/qpe/blist/show_group_count",     true);
+	gaim_prefs_add_bool("/gaim/qpe/blist/dim_idle_buddies",     true);
 }
 
 static void
